--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
